--- a/src/mainWindow.html
+++ b/src/mainWindow.html
@@ -8,12 +8,10 @@
       href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css"
     />
     <link rel="stylesheet" href="index.css" />
-    <script defer src="render.js"></script>
+    <script defer src="mainWindowRender.js"></script>
   </head>
-  <body class="content">
+  <body class="content" style="background-color:rgba(200,200,100,255);">
     <h1>⚡ Electron Screen Recorder</h1>
-
-    <video></video>
 
     <button id="startBtn" class="button is-primary">Start</button>
     <button id="stopBtn" class="button is-warning">Stop</button>
